<package format="2">
  <name>heron_msgs</name>
  <version>0.0.0</version>
  <description>Messages, services and actions used by Heron</description>
  <author email="rjulia@robotnik.com">Raquel Julia</author>

  <maintainer email="rjulia@robotnik.com">Raquel Julia</maintainer>

  <license>BSD</license>  

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robotnik_msgs</depend>
  
  <exec_depend>message_runtime</exec_depend>
</package>
